; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_bitmap_packer.c_size_index.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_bitmap_packer.c_size_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HEIGHT_SORT_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @size_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @size_index(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @mp_log2(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @HEIGHT_SORT_BITS, align 4
  %8 = shl i32 %6, %7
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @HEIGHT_SORT_BITS, align 4
  %11 = shl i32 %9, %10
  %12 = load i32, i32* %3, align 4
  %13 = ashr i32 %11, %12
  %14 = sub nsw i32 -1, %13
  %15 = load i32, i32* @HEIGHT_SORT_BITS, align 4
  %16 = shl i32 1, %15
  %17 = sub nsw i32 %16, 1
  %18 = and i32 %14, %17
  %19 = add nsw i32 %8, %18
  ret i32 %19
}

declare dso_local i32 @mp_log2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
